Fix race condition in ConnectionInterface::getTimesUsed()

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.10, 7.0.22
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Security
    • Fully Compatible
    • ALL
    • v8.0, v7.0
    • RnD Security 2025-03-03
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      There is a race condition when accessing and modifying `_timesUsed` with 
      ConnectionInterface::indicateUsed() and ConnectionInterface::getTimesUsed().

            Assignee:
            Adrian Gonzalez Montemayor
            Reporter:
            Adrian Gonzalez Montemayor
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: