SERVER-101242 Fix race condition in ConnectionInterface::getTimesUsed() (#32717)

GitOrigin-RevId: 51ef6077635a7a58b419791809aa8f4c71c1df6d