src/mongo/executor/connection_pool.h
@@ -496,7 +496,7 @@ protected:
 private:
     size_t _generation;
     Date_t _lastUsed;
-    size_t _timesUsed = 0;
+    std::atomic<size_t> _timesUsed{0};
     Status _status = ConnectionPool::kConnectionStateUnknown;
 };
 
